@@ -100,6 +100,7 @@ Please note that our support for the checkout block is still experimental and th
 
 = 2.9.0 - 2021-xx-xx =
 * Add - *Early access*: allow your store to collect payments with iDEAL. Enable the feature in settings!
+* Add - Split discount line in timeline into variable fee and fixed fee.
 
 = 2.8.2 - 2021-08-05 =
 * Fix - If account is disconnected or not set up do not display onboarding task and UPE inbox note.
